<resources>
    <string name="app_name">AirQuality</string>
    <string name="title_home">Pulpit</string>
    <string name="title_map">Mapa</string>
    <string name="title_settings">Informacje</string>
    <string name="title_stations">Stacje</string>
    <string name="title_measurements">Pomiary</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="station_title_placeholder">Nazwa stacji pomiarowej</string>
    <string name="station_description_placeholder">Opis stacji pomiarowej</string>
    <string name="measurement_name_placeholder">PM2,5</string>
    <string name="measurement_description_placeholder">Pył zawieszony o średnicy nie większej niż 2,5 μm</string>
    <string name="measurement_index_description_placeholder">Indeks umiarkowany</string>
    <string name="measurement_value_placeholder">2137</string>
    <string name="measurement_station_placeholder">Nazwa stacji</string>
    <string name="measurement_index_placeholder">Źródło danych: api.gios.gov.pl</string>

    <string name="ST_INDEX">Jakość powietrza</string>
    <string name="CO">CO</string>
    <string name="NO2">NO2</string>
    <string name="O3">O3</string>
    <string name="SO2">SO2</string>
    <string name="PM25">PM2,5</string>
    <string name="PM10">PM10</string>
    <string name="C6H6">C6H6</string>

    <string name="index_name">Indeks jakości: </string>

    <string name="ST_INDEX_DESCRIPTION">Ogólna jakość powietrza</string>
    <string name="CO_DESCRIPTION">Tlenek węgla (mg/m3)</string>
    <string name="NO2_DESCRIPTION">Dwutlenek azotu (µg/m3)</string>
    <string name="O3_DESCRIPTION">Ozon (µg/m3)</string>
    <string name="SO2_DESCRIPTION">Dwutlenek siarki (µg/m3)</string>
    <string name="PM25_DESCRIPTION">Cząsteczki o średnicy ≤ 2,5 μm (µg/m3)</string>
    <string name="PM10_DESCRIPTION">Cząsteczki o średnicy ≤ 10 μm (µg/m3)</string>
    <string name="C6H6_DESCRIPTION">Benzeny (µg/m3)</string>
    <string name="VAL_NA">N/A</string>
    <string name="VAL_ST_INDEX">-</string>
    <string name="SAVED_STATIONS">SAVED_STATIONS</string>

    <string name="nearest_station_placeholder">Najbliższa stacja pomiarowa</string>
    <string name="saved_stations_placeholder">Zapisane stacje</string>

    <string name="nearest_station_title_placeholder">Wyszukiwanie stacji…</string>
    <string name="nearest_station_description_placeholder">N/A</string>
    <string name="nearest_station_index_placeholder">N/A</string>
</resources>