<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.airqualityandroid.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_stations"
        android:name="com.example.airqualityandroid.ui.stations.StationsFragment"
        android:label="@string/title_stations"
        tools:layout="@layout/fragment_stations" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.airqualityandroid.ui.map.MapsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps" />

<!--    <fragment-->
<!--        android:id="@+id/navigation_settings"-->
<!--        android:name="com.example.airqualityandroid.ui.settings.SettingsFragment"-->
<!--        android:label="@string/title_settings"-->
<!--        tools:layout="@layout/fragment_settings" />-->
</navigation>