<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardElevation="3dp"
    android:id="@+id/station_item">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/station_icon"
            android:layout_width="0dp"
            android:layout_weight="0.13"
            android:padding="10dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_check_circle_24"
            app:tint="@color/colorSecondary" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.65"
            android:padding="10dp"
            android:background="?android:attr/selectableItemBackground">

            <TextView
                android:id="@+id/measurement_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/measurement_name_placeholder"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/measurement_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:text="@string/measurement_description_placeholder"
                android:textColor="#A4070707"
                android:layout_below="@id/measurement_name"
                />
<!--            <TextView-->
<!--                android:id="@+id/measurement_description_2"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:singleLine="true"-->
<!--                android:text="@string/measurement_description_placeholder"-->
<!--                android:textColor="#A4070707"-->
<!--                android:layout_below="@id/measurement_description"-->
<!--                />-->
        </RelativeLayout>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.22"
            android:layout_height="match_parent"
            android:text="@string/measurement_value_placeholder"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/black"
            />
    </LinearLayout>


</androidx.cardview.widget.CardView>